<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.afrasilv.meeptest.ui.details.DetailsMarkerDialogFragment">

    <data>
        <variable
            name="detailsMarkerViewModel"
            type="com.afrasilv.meeptest.ui.details.DetailsMarkerViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/details_marker_dialog_close_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@drawable/ic_clear_black_24dp"
            android:layout_gravity="end"
            android:onClick="@{() -> detailsMarkerViewModel.closeDialog()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/details_marker_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_close_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/details_marker_dialog_title"
            android:textSize="18sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_title"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/details_marker_dialog_marker_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_id"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_id"
                android:text="@{detailsMarkerViewModel.getViewData().markerId}"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_id"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_name"
                android:paddingRight="5dp" />

            <TextView
                android:id="@+id/details_marker_dialog_marker_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_id"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_name"
                android:text="@{detailsMarkerViewModel.getViewData().markerName}"
                android:paddingRight="40dp"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_latlng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_name_value"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_latlng"
                android:paddingRight="5dp" />

            <TextView
                android:id="@+id/details_marker_dialog_marker_latlng_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_name_value"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_latlng"
                android:text="@{detailsMarkerViewModel.getViewData().markerLatLng}"
                android:paddingRight="40dp"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_company_zone_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_latlng_value"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_company_zone"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_latlng_value"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_company_zone_id"
                android:text="@{detailsMarkerViewModel.getViewData().markerCompanyId + ``}"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_car_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isCar}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_company_zone_id"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_car_data"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isCar}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_company_zone_id"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_car_data"
                android:text="@{detailsMarkerViewModel.getViewData().carData}"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isCar}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_car_data"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_battery"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isCar}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_car_data"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_battery"
                android:text="@{detailsMarkerViewModel.getViewData().batteryData}"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_helmets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isMoped}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_battery"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_helmets"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isMoped}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_battery"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_helmets"
                android:text="@{detailsMarkerViewModel.getViewData().helmetsData}"
                />

            <TextView
                android:id="@+id/details_marker_dialog_marker_bikes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isBikes}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_helmets"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/details_marker_dialog_marker_bikes_number"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{detailsMarkerViewModel.getViewData().isBikes}"
                app:layout_constraintTop_toBottomOf="@id/details_marker_dialog_marker_helmets"
                app:layout_constraintStart_toEndOf="@id/details_marker_dialog_marker_bikes_number"
                android:text="@{detailsMarkerViewModel.getViewData().bikesData}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>